[package]
name = "geometric-centralities"
version = "0.1.0"
edition = "2021"

[dependencies]
webgraph = { path = "../webgraph-rs" }
webgraph-algo = { path = "../webgraph-algo-rs" }
dsi-progress-logger = "0.2.4"
atomic-counter = "1.0.1"
rayon = "1.10.0"
common_traits = "0.10.0"
env_logger = "0.11.5"
log = "0.4.22"
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive"] }
assert_approx_eq = "1.1.0"
sync-cell-slice = "0.9.11"
atomic_float = "1.1.0"

[profile.release]
opt-level = 3             # like --release
lto = "fat"               # Full LTO
overflow-checks = false   # Disable integer overflow checks.
debug-assertions = false  # Enables debug assertions.
codegen-units = 1         # slower compile times, but maybe better perf

[[example]]
name = "bench_geometric_centralities"